# clew

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
cape_packages/: exe_cmplog.py  exe_drcov.py
cape_packages/cmplog/: BUILD_RECIPE.md  CMakeLists.txt  README.md  SUDOERS_PROPOSAL.md  cmplog.c
clew/: cape_client.py  cli.py  novelty.py  pipeline.py  tiers.py
clew/analysis/: dataflow.py  oracle_grade.py
clew/channels/: bn_callsites.py  capa.py  floss.py
clew/channels/binaryninja/: __init__.py  callsites.py  dataflow.py
clew/channels/cape/: __init__.py  client.py  cmplog_parse.py  correlate.py
clew/eval/: __init__.py  novelty.py  oracle_grade.py
docs/: binary_ninja_headless_setup.md  bn_callsites.md  bn_dataflow.md  channel0_at_scale.md  floss.md  pilot_results.md  plan_derivation_rename.md  schema.md  schema_v2_notes.md  static_pipeline.md  theory.md  usage.md  week_02_retrospective.md  week_03_bn_callsites.md  week_03_floss.md  week_04_bn_dataflow.md
docs/cape_integration/: cape_migration_mlcluster01.md  capev2_client_writeup.md  capev2_deployment_writeup.md  exe_drcov.py
docs/cape_integration/cmplog/: SUDOERS_PROPOSAL.md
docs/context/: CONTEXT.md  defcon-slide-outline.md  evasion-taxonomy.md
docs/notes/: CONTEXT.md  clew-brainstorm.md  defcon-submission.txt  original-plan.md  week_01_retrospective.md
docs/superpowers/plans/: 2026-07-16-repo-cleanup.md
docs/superpowers/specs/: 2026-07-16-repo-cleanup-design.md
results/channel0_at_scale/: benign_manifest.txt  benign_results.jsonl  malware_results.jsonl  manifest.txt  stats.csv
schema/: clew_record.schema.json
scripts/: analyze_channel0.py  batch_channel0.py  select_samples.py  smoke_bn_dataflow.py
tests/: conftest.py  test_bn_callsites.py  test_bn_dataflow.py  test_capa.py  test_cape_client.py  test_cli.py  test_cmplog_parse.py  test_correlate.py  test_floss.py  test_oracle_grade.py  test_pipeline.py  test_schema.py  test_tiers.py  test_version.py
tests/fixtures/: 1fe91674eb8d_01.expected.json  1fe91674eb8d_02.expected.json  SOURCES.md  al-khaser_x86.bn_callsites.json  al-khaser_x86.capa.json  al-khaser_x86.capa_techniques.json  al-khaser_x86.floss.json  correlate_input_01.json  record_01.draft.expected.json  record_01_candidate.md  record_02_bazaar_shortlist.md  record_02_candidate.md
