[project]
name = "clew"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flare-capa>=9.4.0,<10",
    "flare-floss==3.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "jsonschema>=4"]
analysis = ["matplotlib>=3.8", "pandas>=2.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clew*"]
